# linkwork-executor

./: .gitignore  README.md  README_zh-CN.md  pyproject.toml
src/linkwork_executor/: __init__.py
src/linkwork_executor/work/: __init__.py  agents_guide.py  consumer.py  lifecycle.py  worker.py  workspace.py
