[project]
name = "linkwork-executor"
version = "0.1.0"
description = "LinkWork Executor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkwork-agent-sdk>=0.1.0",
]

[project.scripts]
linkwork-executor-worker = "linkwork_executor.work.worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

